// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`children should match snapshot 1`] = `
.c0 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
  cursor: pointer;
}

.c0:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c0::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c0::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}

.c0::-webkit-inner-spin-button {
  height: auto;
}

.c0::-webkit-outer-spin-button {
  height: auto;
}

.c0::before,
.c0::after {
  box-sizing: border-box;
}

.c2 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c2::before,
.c2::after {
  box-sizing: border-box;
}

.c1 {
  color: hsl(0,0%,13%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
}

.c1.fi-chip {
  border-radius: 14px;
  padding: 2px 10px;
  color: hsl(0,0%,100%);
  background: hsl(212,63%,45%);
  max-height: 100%;
  display: inline-block;
}

.c1.fi-chip:focus {
  outline: 0;
  position: relative;
}

.c1.fi-chip:focus::after {
  content: '';
  position: absolute;
  pointer-events: none;
  top: -2px;
  right: -2px;
  bottom: -2px;
  left: -2px;
  border-radius: 2px;
  background-color: transparent;
  border: 0px solid hsl(0,0%,100%);
  box-sizing: border-box;
  box-shadow: 0 0 0 2px hsl(196,77%,44%);
  z-index: 9999;
  border-radius: 16px;
}

.c1.fi-chip .fi-chip--content {
  display: block;
  word-break: break-word;
  overflow: hidden;
  line-height: 1.5em;
}

.c1.fi-chip--disabled.fi-chip {
  cursor: not-allowed;
  background: hsl(202,7%,67%);
}

.c1.fi-chip--disabled.fi-chip:hover,
.c1.fi-chip--disabled.fi-chip:active {
  background: hsl(202,7%,67%);
}

.c1.fi-chip--button {
  cursor: pointer;
}

.c1.fi-chip--button:hover {
  background: hsl(212,63%,49%);
}

.c1.fi-chip--button:active {
  background: hsl(212,63%,37%);
}

.c1.fi-chip--button:focus {
  outline: 3px solid transparent;
}

.c1.fi-chip--removable {
  padding-top: 2px;
  padding-right: 22px;
  padding-bottom: 2px;
  padding-left: 10px;
  position: relative;
}

.c1.fi-chip--removable .fi-chip--icon {
  position: absolute;
  top: 8px;
  right: 10px;
  height: 12px;
  width: 12px;
}

.c1.fi-chip--removable .fi-chip--content {
  margin-right: 10px;
}

.c1.fi-chip--removable.fi-chip--disabled .fi-chip--icon {
  cursor: not-allowed;
}

<div>
  <button
    aria-disabled="false"
    class="c0 fi-chip fi-chip--button c1"
    type="button"
  >
    <span
      class="c2 fi-chip--content"
    >
      <div
        data-testid="test-div"
      >
        Selection 1
      </div>
    </span>
  </button>
</div>
`;

exports[`classnames should match snapshot 1`] = `
.c0 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
  cursor: pointer;
}

.c0:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c0::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c0::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}

.c0::-webkit-inner-spin-button {
  height: auto;
}

.c0::-webkit-outer-spin-button {
  height: auto;
}

.c0::before,
.c0::after {
  box-sizing: border-box;
}

.c2 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c2::before,
.c2::after {
  box-sizing: border-box;
}

.c1 {
  color: hsl(0,0%,13%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
}

.c1.fi-chip {
  border-radius: 14px;
  padding: 2px 10px;
  color: hsl(0,0%,100%);
  background: hsl(212,63%,45%);
  max-height: 100%;
  display: inline-block;
}

.c1.fi-chip:focus {
  outline: 0;
  position: relative;
}

.c1.fi-chip:focus::after {
  content: '';
  position: absolute;
  pointer-events: none;
  top: -2px;
  right: -2px;
  bottom: -2px;
  left: -2px;
  border-radius: 2px;
  background-color: transparent;
  border: 0px solid hsl(0,0%,100%);
  box-sizing: border-box;
  box-shadow: 0 0 0 2px hsl(196,77%,44%);
  z-index: 9999;
  border-radius: 16px;
}

.c1.fi-chip .fi-chip--content {
  display: block;
  word-break: break-word;
  overflow: hidden;
  line-height: 1.5em;
}

.c1.fi-chip--disabled.fi-chip {
  cursor: not-allowed;
  background: hsl(202,7%,67%);
}

.c1.fi-chip--disabled.fi-chip:hover,
.c1.fi-chip--disabled.fi-chip:active {
  background: hsl(202,7%,67%);
}

.c1.fi-chip--button {
  cursor: pointer;
}

.c1.fi-chip--button:hover {
  background: hsl(212,63%,49%);
}

.c1.fi-chip--button:active {
  background: hsl(212,63%,37%);
}

.c1.fi-chip--button:focus {
  outline: 3px solid transparent;
}

.c1.fi-chip--removable {
  padding-top: 2px;
  padding-right: 22px;
  padding-bottom: 2px;
  padding-left: 10px;
  position: relative;
}

.c1.fi-chip--removable .fi-chip--icon {
  position: absolute;
  top: 8px;
  right: 10px;
  height: 12px;
  width: 12px;
}

.c1.fi-chip--removable .fi-chip--content {
  margin-right: 10px;
}

.c1.fi-chip--removable.fi-chip--disabled .fi-chip--icon {
  cursor: not-allowed;
}

<div>
  <button
    aria-disabled="false"
    class="c0 fi-chip fi-chip--button c1 custom-class"
    type="button"
  >
    <span
      class="c2 fi-chip--content"
    >
      Testcontent
    </span>
  </button>
</div>
`;

exports[`disabled should match snapshot 1`] = `
.c0 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline-block;
  max-width: 100%;
  cursor: pointer;
}

.c0:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c0::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c0::-webkit-file-upload-button {
  -webkit-appearance: button;
  font: inherit;
}

.c0::-webkit-inner-spin-button {
  height: auto;
}

.c0::-webkit-outer-spin-button {
  height: auto;
}

.c0::before,
.c0::after {
  box-sizing: border-box;
}

.c2 {
  line-height: 1.15;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font: 100% inherit;
  line-height: 1;
  text-align: left;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: baseline;
  color: inherit;
  background: none;
  cursor: inherit;
  display: inline;
  max-width: 100%;
  word-wrap: normal;
  word-break: normal;
  white-space: normal;
}

.c2::before,
.c2::after {
  box-sizing: border-box;
}

.c1 {
  color: hsl(0,0%,13%);
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  word-break: break-word;
  overflow-wrap: break-word;
  -webkit-font-smoothing: antialiased;
  font-family: 'Source Sans Pro','Helvetica Neue','Arial',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 600;
}

.c1.fi-chip {
  border-radius: 14px;
  padding: 2px 10px;
  color: hsl(0,0%,100%);
  background: hsl(212,63%,45%);
  max-height: 100%;
  display: inline-block;
}

.c1.fi-chip:focus {
  outline: 0;
  position: relative;
}

.c1.fi-chip:focus::after {
  content: '';
  position: absolute;
  pointer-events: none;
  top: -2px;
  right: -2px;
  bottom: -2px;
  left: -2px;
  border-radius: 2px;
  background-color: transparent;
  border: 0px solid hsl(0,0%,100%);
  box-sizing: border-box;
  box-shadow: 0 0 0 2px hsl(196,77%,44%);
  z-index: 9999;
  border-radius: 16px;
}

.c1.fi-chip .fi-chip--content {
  display: block;
  word-break: break-word;
  overflow: hidden;
  line-height: 1.5em;
}

.c1.fi-chip--disabled.fi-chip {
  cursor: not-allowed;
  background: hsl(202,7%,67%);
}

.c1.fi-chip--disabled.fi-chip:hover,
.c1.fi-chip--disabled.fi-chip:active {
  background: hsl(202,7%,67%);
}

.c1.fi-chip--button {
  cursor: pointer;
}

.c1.fi-chip--button:hover {
  background: hsl(212,63%,49%);
}

.c1.fi-chip--button:active {
  background: hsl(212,63%,37%);
}

.c1.fi-chip--button:focus {
  outline: 3px solid transparent;
}

.c1.fi-chip--removable {
  padding-top: 2px;
  padding-right: 22px;
  padding-bottom: 2px;
  padding-left: 10px;
  position: relative;
}

.c1.fi-chip--removable .fi-chip--icon {
  position: absolute;
  top: 8px;
  right: 10px;
  height: 12px;
  width: 12px;
}

.c1.fi-chip--removable .fi-chip--content {
  margin-right: 10px;
}

.c1.fi-chip--removable.fi-chip--disabled .fi-chip--icon {
  cursor: not-allowed;
}

<div>
  <button
    aria-disabled="true"
    class="c0 fi-chip fi-chip--button c1 fi-chip--disabled"
    disabled=""
    type="button"
  >
    <span
      class="c2 fi-chip--content"
    >
      Testcontent
    </span>
  </button>
</div>
`;
